#730: log timings to analyze what happens